base/prod/sdp-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdp-web
  name: sdp-web
  namespace: prod
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdp-web
  template:
    metadata:
      labels:
        app: sdp-web
    spec:
      containers:
      - name: sdp-web
        image: sdpequinor/sdp-web:latest
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 3000
          capabilities:
            drop:
            - all
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 50m
            memory: "100Mi"
          limits:
            cpu: 100m
            memory: "200Mi"
