base/prod/sdp-web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sdp-web
  namespace: prod
  labels:
    app: sdp-web
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - sdp-web.sdpaks.equinor.com
    secretName: sdp-web-tls
  rules:
    - host: sdp.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sdp-web
              servicePort: 80
    - host: sdp-web.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: sdp-web
              servicePort: 80
